# KGame

./: .gitignore  CMakeLists.txt  README.md
assert/model/: game.db
assert/model/database/KGame/: KGame.pjb  KGame.prj
model/: config.json  game.sql
src/core/: CMakeLists.txt
src/core/context/: context.cc  context.hpp  context_fwd.hpp  manager_base.hpp
src/core/items/: basic_items.hpp  game_items.hpp  items_manager.cc  items_manager.hpp
src/core/logger/: logger.hpp
src/core/player/: player_manager.hpp
src/editor/: CMakeLists.txt  main.cpp
src/editor/dialog/: dialog_about.cpp  dialog_about.h  dialog_about.ui  dialog_setting.cpp  dialog_setting.h  dialog_setting.ui
src/editor/windows/: window_main.cpp  window_main.ui
src/service/: CMakeLists.txt  main.cc
src/tools/: CMakeLists.txt
src/utils/: hash.hpp
src/utils/algorithm/: kmp.hpp
src/utils/packets/: bytes.hpp  chunk.hpp  debug.hpp  packet.hpp
tests/: CMakeLists.txt  core.cc  cppcrc.cc  crc.cc  lepton.cc  sqlite.cc  udp.cc
tools/: CMakeLists.txt
tools/file_crc/: CMakeLists.txt  main.cc
utils/: thread_pool.hpp
